@@ -1,3 +1,12 @@
+2011-10-19  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: The "x" in "980px x 36px" looks weird in the inspector node callout
+        https://bugs.webkit.org/show_bug.cgi?id=69857
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/DOMNodeHighlighter.cpp:
+
 2011-10-20  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r97917.
